# temporary

devel/: .catkin  local_setup.sh
devel/lib/oryksbot_gazebo/: odom_pub3
devel/lib/pkgconfig/: oryksbot_control.pc  oryksbot_description.pc  oryksbot_gazebo.pc  oryksbot_mapping.pc  oryksbot_navigation.pc  rplidar_ros.pc
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
src/oryksbot_control/: CMakeLists.txt
src/oryksbot_control/config/: oryksbot_control.yaml
src/oryksbot_control/launch/: control.launch  gazebo.launch  oryksbot_control.launch  oryksbot_joy.launch  serial_node.launch
src/oryksbot_control/scripts/: oryksbot_joy.py
src/oryksbot_description/: CMakeLists.txt  package.xml
src/oryksbot_description/launch/: gazebo.launch  oryksbot_description.launch  rviz.launch
src/oryksbot_description/meshes/: base_link.STL  caster_wheel.STL  left_wheel.STL  lidar.STL  right_wheel.STL
src/oryksbot_description/rviz/: default.rviz
src/oryksbot_description/urdf/: gazebo_physics.xacro  gazebo_plugins.xacro  gazebo_properties.xacro  macros.xacro  materials.xacro  oryksbot.xacro  oryksbot_properties.xacro
src/oryksbot_gazebo/: CMakeLists.txt  package.xml
src/oryksbot_gazebo/launch/: gazebo.launch  oryks_gazebo.launch  rviz.launch  warehouse_world.launch
src/oryksbot_gazebo/rviz/: laser.rviz
src/oryksbot_gazebo/src/: odom3.cpp
src/oryksbot_gazebo/worlds/: warehouse.world
src/oryksbot_mapping/: CMakeLists.txt  package.xml
src/oryksbot_mapping/config/: gmapping_params.yaml
src/oryksbot_navigation/: CMakeLists.txt
(+11 files in other folders)
